feat: approve a passenger (#6)
* feat: approve a passenger

* feat: disapprove passenger
