# docs/swagger/passengers.yml
@@ -63,3 +63,71 @@
         description: Not Found
       500:
         description: Internal Server Error
+
+/trips/{tripId}/passengers/{userId}/approve:
+  put:
+    summary: Approve a passenger for a trip
+    description: Approve a passenger for a trip
+    operationId: approvePassengerForTrip
+    tags:
+      - Passengers
+    security:
+      - BearerAuth: []
+    parameters:
+      - name: tripId
+        in: path
+        description: ID of trip to approve passenger for
+        required: true
+        schema:
+          type: string
+      - name: userId
+        in: path
+        description: ID of user to approve
+        required: true
+        schema:
+          type: string
+    responses:
+      204:
+        description: Passenger approved for trip
+      401:
+        description: Unauthorized
+      403:
+        description: Forbidden
+      404:
+        description: Not Found
+      500:
+        description: Internal Server Error
+
+/trips/{tripId}/passengers/{userId}/disapprove:
+  delete:
+    summary: Disapprove a passenger for a trip
+    description: Disapprove a passenger for a trip
+    operationId: disapprovePassengerForTrip
+    tags:
+      - Passengers
+    security:
+      - BearerAuth: []
+    parameters:
+      - name: tripId
+        in: path
+        description: ID of trip to disapprove passenger for
+        required: true
+        schema:
+          type: string
+      - name: userId
+        in: path
+        description: ID of user to disapprove
+        required: true
+        schema:
+          type: string
+    responses:
+      204:
+        description: Passenger disapproved for trip
+      401:
+        description: Unauthorized
+      403:
+        description: Forbidden
+      404:
+        description: Not Found
+      500:
+        description: Internal Server Error
