# start/routes.ts
@@ -33,4 +33,7 @@ Route.group(() => {
   Route.resource('trips', 'TripsController').apiOnly()
   Route.post('/trips/:id/passengers', 'PassengersController.store')
   Route.delete('/trips/:id/passengers/:passengerId', 'PassengersController.destroy')
+
+  Route.put('/trips/:id/passengers/:passengerId/approve', 'PassengersController.approve')
+  Route.delete('/trips/:id/passengers/:passengerId/disapprove', 'PassengersController.disapprove')
 }).middleware('auth')
